[tool.poetry]
name = "tezland-indexer"
version = "0.1.0"
description = ""
authors = ["852Kerfunkle <852Kerfunkle@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
#dipdup = { git = "https://github.com/dipdup-net/dipdup-py.git", branch = "feat/ctx-pool" }
dipdup = "^4.2.7"
aiohttp = "^3.8.1"
sh = "^1.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
